--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "brcypt": "^1.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -16,6 +18,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.9.10",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "validator": "^13.0.0"
   }
 }
