--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
+    "request": "^2.88.2",
     "validator": "^13.0.0"
   },
   "devDependencies": {
